infrastructure/gateway/hubble-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: gateway
      namespace: kube-system
  hostnames:
    - hubble.rezoreyz.lan
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
